@@ -1,3 +1,12 @@
+2006-02-21  Edward Hervey  <edward@fluendo.com>
+
+	* pitivi/ui/complexsource.py:
+	* pitivi/ui/layerwidgets.py:
+	* pitivi/ui/ruler.py:
+	* pitivi/ui/tracklayer.py:
+	Double-buffered widgets for more reactive timeline.
+	Start at ruler drawing, for the time being fixed zoom ratio.
+
 2006-02-20  Edward Hervey  <edward@fluendo.com>
 
 	* pitivi/playground.py:
